# law_agent

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: main.py
app/api/v1/endpoints/: chat.py
app/engine/: ingest.py  rag_chain.py
docs/: SRS Justify MVP.md
